configured to receive customer information from nginx
