# src/routes/index.js
@@ -6,12 +6,12 @@ const router = express.Router();
 
 router.post('/accounts', AccountController.createAccount);
 router.get('/accounts', AccountController.getAccounts);
-router.get('/accounts/:userId', AccountController.getAccount);
-router.delete('/accounts/:userId', AccountController.deleteAccount);
+router.get('/accounts/:customerId', AccountController.getAccount);
+router.delete('/accounts/:customerId', AccountController.deleteAccount);
 
 router.post('/transactions/transfer', TransactionController.transfer);
 router.get('/transactions', TransactionController.getTransactions);
-router.get('/transactions/:userId', TransactionController.accountTransaction);
+router.get('/transactions/:customerId', TransactionController.accountTransaction);
 router.post('/transaction/fund-card', TransactionController.fundCard);
 router.post('/transactions/webhook', TransactionController.fundAccount);
 router.post('/transactions/fund-account', TransactionController.prepareToFund);
